[package]
name = "blacksmith"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blacksmith_macros = { path = "./blacksmith_macros" }
futures = "0.3.29"
reqwest = "0.11.22"
tokio = { version = "1.35.0", features = ["full"] } 
bytes = "1.5.0"
zip-extract = "0.1.2"
serde_json = "1.0.108"
serde = "1.0.193"
thiserror = "1.0.56"
