[package]
name = "blacksmith"
version = "0.1.1"
edition = "2021"
authors = ["Kimon Vostanis <kimonvostanis@gmail.com>"]
description = "Building-block functions for async systems"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blacksmith_macros = { path = "./blacksmith_macros", version = "0.1.0" }
futures = "0.3.29"
reqwest = "0.11.22"
tokio = { version = "1.35.0", features = ["full"] } 
bytes = "1.5.0"
zip-extract = "0.1.2"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
anyhow = "1.0.80"
