[package]
name = "blacksmith_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
syn = { version = "2.0", features = ["full", "extra-traits", "parsing"] }
