[package]
name = "spamming_sec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.29"
reqwest = "0.11.22"
tokio = { version = "1.35.0", features = ["full"] } 
bytes = "1.5.0"
zip-extract = "0.1.2"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
anyhow = "1.0.80"
blacksmith = { version = "0.1.13", path = "../.." }
blacksmith_macros = { version = "0.1.1", path = "../../blacksmith_macros" }
